kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwa-backend
  namespace: pwa
spec:
  selector:
    matchLabels:
      app: pwa-backend
  template:
    metadata:
      labels:
        app: pwa-backend
    spec:
      containers:
      - name: pwa-backend
        image: DOCKER_IMAGE
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
