kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwa-backend
  namespace: pwa
spec:
  selector:
    app: pwa-backend
  ports:
  - port: 8081
    targetPort: 8081
