kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwa-frontend
  namespace: pwa
spec:
  selector:
    app: pwa-frontend
  ports:
  - port: 3000
    targetPort: 3000
