kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwa
  namespace: pwa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - unpeumoinsdunkilo.prophecy-eip.com
    secretName: prophecy-tls
  ingressClassName: nginx
  rules:
  - host: unpeumoinsdunkilo.prophecy-eip.com
    http:
      paths:
      - pathType: Prefix
        path: "/(/*)(.*)"
        backend:
          service:
            name: pwa-frontend
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api(/*)(.*)"
        backend:
          service:
            name: pwa-backend
            port: 
              number: 8081
